<resources>
    <string name="app_name">Organizing Unit CACCF</string>
    <string name="login">Login</string>
    <string name="unitLogo">UnitLogo</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="organizers_for_christ">Organizers for Christ</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_recording">New Recording</string>
    <string name="tools">Tools</string>
    <string name="exit_app">Exit App</string>
    <string name="recorded_by">Recorded By</string>
    <string name="recordedby">RecordedBy</string>
    <string name="title">Title</string>
    <string name="pc_owner">PC Owner</string>
    <string name="preacher">Preacher</string>
    <string name="event">Event / Program</string>
    <string name="date">Date</string>
    <string name="edited">Edited</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dateDay">Day</string>
    <string name="dateMonth">Month</string>
    <string name="dateYear">Year</string>
    <string name="our_mission_and_vision">Our Mission and Vision</string>
    <string name="contacts_list">Contacts List</string>
    <string name="learn">Learn</string>
    <string name="sample_bible_text">One thing I desired of the Lord,that will I seek after; that i dwell in the house of the Lord all the days of my life, to behold the beuty of the Lord, and to enquire in His temple</string>
    <string name="psalms_27_4">Psalms 27:4</string>
    <string name="the_word_today">The Word Today</string>
    <string name="group_a_to_clean_speakers">Group A to Clean Speakers</string>
    <string name="sample_news">Be informed that all Group A members will becoming to the fellowship by Saturday to clean all the speakers</string>
    <string name="recordings">Recordings</string>
    <string name="organizing_unit_2017_2018_academy_session">ORGANIZING UNIT 2017/2018 ACADEMY SESSION</string>
    <string name="vision_statements">VISION STATEMENTS</string>
    <string name="vision">\n - Walking the path of holiness and righteousness and living a life filled and led by the Holy Ghost (Luke 1:75, Eph 5:18). \n - Fainting not, and standing in faith (Gal 6:9, 1 Thess 3: 5). \n - Knowing and following God’s plan for our life “PURPOSE" \n</string>
    <string name="mission_statements">MISSION STATEMENTS</string>
    <string name="mission">\n - To raise members that bears, forgive and correct one another in love and unity. \n - Monthly meeting hour ( prayer hour, prayer walk, evangelism or mountain prayer; as the spirit leads.) \n - Bible study/exposition in our unit meetings. Also giving assignment to members on it.\n - Encourage members to seek God the more. \n - Internet research, training session, problem solving skills and assignment on gadgets and systems.\n</string>
    <string name="audio_and_video">Audio and Video</string>
    <string name="group_d">Group D</string>
    <string name="group_a">Group A</string>
    <string name="projection">Projection</string>
    <string name="schedules_for_the_week">Schedules for the Week</string>
    <string name="power">Power</string>
    <string name="group_b">Group B</string>
    <string name="official_use_only">…Official Use Only…</string>
    <string name="events_and_images_gallery">Events And Images Gallery</string>
    <string name="not_loggedin">Organizers for Christ\t- Not LoggedIn</string>
    <string name="save_profile">Save Profile</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="pickdate">PickDate</string>
    <string name="hostel_address">Hostel Address</string>
    <string name="sample_name">Sample Name</string>
    <string name="sample_number">Sample Number</string>
    <string name="sample_email">Sample Email</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="click_to_choose_learning_path">Click to choose learning path…</string>
    <string name="clickToLogin">Click to Login</string>
</resources>
