<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_mission_vision"
        android:title="@string/our_mission_and_vision" />
    <item
        android:id="@+id/nav_Recording"
        android:title="@string/recordings" />
    <item
        android:id="@+id/nav_gallery"
        android:title="@string/events_and_images_gallery" />
    <item
        android:id="@+id/nav_contacts_list"
        android:title="@string/contacts_list" />
    <item
        android:id="@+id/nav_addRecording"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/new_recording" />
    <item
        android:id="@+id/nav_learn"
        android:title="@string/learn" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit_app" />

</menu>
