<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/common_google_signin_btn_text_light_disabled"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/RecordedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recorded_by"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/pcOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pc_owner"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/preacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preacher"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/dateDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateDay"
                    android:inputType="date"
                    android:maxLength="2" />

                <EditText
                    android:id="@+id/dateMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateMonth"
                    android:inputType="date"
                    android:maxLength="2"/>

                <EditText
                    android:id="@+id/dateYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateYear"
                    android:maxLength="4"
                    android:inputType="date" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/edited" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/validateText"
                android:textColor="#900000"
                />

            <LinearLayout
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="1dp">

                <Button
                    android:id="@+id/cancel_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/borderlessButtonStyle"
                    android:onClick="onClickCancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/save_action"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickSave"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
</android.support.v7.widget.CardView>