<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    android:layout_margin="8dp"
    android:layout_gravity="center"
    tools:context="innovations.tech.platinum.organizingunitcaccf.MisionAndVisionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/VisionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vision_statements"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center"/>

        <TextView
            android:id="@+id/theVision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/vision"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/missionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_statements"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/theMission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/mission"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</android.support.v7.widget.CardView>
