<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="3dp"
    app:cardElevation="10dp"
    tools:context="innovations.tech.platinum.organizingunitcaccf.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1.5">

                <ImageView
                    android:id="@+id/profileAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/avatar"
                    android:clickable="true"
                    android:onClick="selectProPics"
                    android:contentDescription="@string/profile_picture" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <EditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/UserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/UserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/UserDOB"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:onClick="PickDate"
                    android:text="@string/pickdate" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/UserHostelAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/editProfileButtons"
                android:visibility="invisible">

                <Button
                    android:id="@+id/cancelProfile"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
                    android:text="@string/cancel"
                    android:onClick="CancelSaveProfile"
                    android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel" />

                <Button
                    android:id="@+id/SaveProfile"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_profile"
                    android:onClick="SaveProfile"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/EditFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:clickable="true"
        android:onClick="editProfile"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_edit" />
</android.support.v7.widget.CardView>
