<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="3dp"
    app:cardElevation="10dp"
    android:clickable="true"
    android:layout_margin="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/word_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:text="@string/the_word_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            tools:targetApi="lollipop"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/theTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/psalms_27_4"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/theText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_bible_text"
            android:padding="5dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>