<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".contacts.ContactsActivity"
    app:cardElevation="5dp"
    android:padding="1dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:id="@+id/contact_image"
            android:contentDescription="@string/profilepicture"
            android:src="@mipmap/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_number" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                >
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@android:drawable/sym_action_chat"
                    app:fabSize="mini"
                    android:visibility="invisible"
                    android:onClick="chat_with_contact"
                    android:layout_margin="8dp"
                    android:id="@+id/in_app_chat"/>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    app:fabSize="mini"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_email"
                    app:backgroundTint="@android:color/holo_green_light"
                    android:layout_margin="8dp"
                    android:onClick="send_message_to_contact"
                    android:id="@+id/send_message"/>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:id="@+id/call"
                    android:onClick="call_contact"
                    android:src="@android:drawable/sym_action_call"
                    android:layout_margin="8dp"
                    app:backgroundTint="@color/cardview_light_background"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>